--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section class="section section__main bg-black">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
 				<div class="section__main__container">
@@ -7,9 +7,8 @@
             <h2 class="text-white text-center">Reddit Posts</h2>
           </div>
           
-          <app-items-list></app-items-list>
-          
-        </div>
+          <div app-items-list class=""></div>
+          </div>
       </div>
     </div>
   </div>
