--- a/src/app/items-list/items-list.component.html
+++ b/src/app/items-list/items-list.component.html
@@ -1,22 +1,37 @@
 <section class="section section__items bg-black">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col">
-				<div *ngFor="let item of items" class="section__items__container">
-                    
-                    <h4 class="text-white section__items__title d-inline-block">{{item.user}}</h4>
-                    <p class="section__items__time text-gray d-inline-block">{{item.time}}h hours ago</p>
-                    <div class="section__items__image">
-                        <img src="https://picsum.photos/100" alt="">
-                        <p class="section__items__description text-white d-inline-block align-middle">{{item.text}}</p>
-                        <span class="section__items__icon text-white align-right">&#62;</span>
-                    </div>
-                    <div class="section__items__bottom">
-                        <a href="#" class="section__items__bottom__button text-orange text-decoration-none">X</a>
-                        <span class="text-white">Dismiss Post</span>
-                        <span class="section__items__bottom__comments text-orange">Comments</span>
+			<div class="col-4">
+                <div class="cont">
+                    <div (click)="loadPostComponent(post.data)" *ngFor="let post of posts; let i = index;" [attr.data-index]="i" class="section__items__container">
+                        
+                        <p class="text-white section__items__title d-inline-block">{{post.data.author}}</p>
+                        <p class="section__items__time text-gray d-inline-block">{{post.data.created_utc | date : 'mediumTime'}}</p>
+                        <div class="content">
+                            <img class="section__items__image" src="{{post.data.thumbnail}}" alt="">
+                            <p class="section__items__description text-white d-inline-block align-middle">{{post.data.title}}</p>
+                            
+                            <span class="section__items__icon text-white align-right">&#62;</span>
+                        </div>
+                        <div class="section__items__bottom">
+                            <a (click)="removeItem(posts, i)" class="section__items__bottom__button text-orange text-decoration-none">X</a>
+                            <span (click)="removeItem(posts, i)" class="text-white">Dismiss Post</span>
+                            <span class="section__items__bottom__comments text-orange">{{post.data.num_comments}} Comments</span>
+                        </div>
                     </div>
                 </div>
+                
+                <div class="section__items__dismiss">
+                    <p (click)="removeAllItems(posts)" class="section__items__dismiss__text">Dismiss all</p>  
+                </div>
+                
+
+            </div>
+
+            <div class="col-8">
+
+                <app-post *ngIf="loadComponent" [author]="author" [title]="title" [time]="time" [img_path]="img_path" ></app-post>
+                
             </div>
         </div>
     </div>
