--- a/src/app/items-list/items-list.component.scss
+++ b/src/app/items-list/items-list.component.scss
@@ -34,8 +34,18 @@
                 width: 50% !important;
               }
           }
+
+          &__read {
+            display: inline-block;
+            background-color: $cyan;
+            border-radius: 50%;
+            height: 10px;
+            width: 10px;
+            vertical-align: top;
+            margin-top: 5px;
+          }
+
         &__container {
-            
             max-width: toREM(600);
             border-bottom: 1px solid $gray;
             :first-child {
@@ -45,6 +55,7 @@
 
         &__title {
             font-size: 1.2rem;
+            margin-right: 1.2rem;
         }
 
         &__image {
